Fixing flakiness of TextureLayerChangeInvisibleMailboxTest

The flake seems to be because of a race between the order of running main and impl
thread. Resources are always reclaimed after impl threads posts
DidCommitAndDrawFrame to the main thread so whether commit_count_ == 4 or 5
depends on whether we switch to main thread or keep running impl thread and
reclaim resources which triggers posting a task to the main thread to release the
mailbox. Even though the task for DidCommitAndDrawFrame is posted first, the task
for releasing mailbox is posted using a blocking task runner so it is run first.
In order to solve this issue, we decided to use
DidReceiveCompositorFrameAck instead of DidCommitAndDrawFrame because
all the resources are released before DidReceiveCompositorFrameAck is
called so the race between releasing resources and starting next commit
doesn't happen. In single-thread mode we used to call
DidReceiveCompositorFrameAck directly instead of PostTasking which
caused different behaviour from multi-thread mode. We decided to also
use PostTask for DidReceiveCompositorFrameAck in single thread mode and
use weak pointers to discard the ack if CompositorFrameSink is released
before ack is processed.

CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel
BUG=702868

Review-Url: https://codereview.chromium.org/2757373002
Cr-Commit-Position: refs/heads/master@{#465638}

Former-commit-id: 44b6dfc95bd4a7b8240b81720b9804692b439ae9